--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      </ul>
     </header> 
 
-    <body>
+    <body class="bodyS"> 
         <div class="main"> <!-- Página principal-->
             
             <inp action="">
@@ -85,8 +85,8 @@
     </footer>
     
     <!-- Importa o javascript-->
-    <script src="js/criptografar.js"></script> 
-    <script src="js/descriptografar.js"></script>
-    <script src="js/BotaoCopiar.js"></script>
+    <script src="Js/descriptografar.js"></script> 
+    <script src="Js/criptografar.js"></script>
+    <script src="Js/BotaoCopiar.js"></script>
 
 </html>
